update KeyStore code

--- a/Code/RPI/SMQTT/ks_ibe_sss/Makefile
+++ b/Code/RPI/SMQTT/ks_ibe_sss/Makefile
@@ -2,9 +2,11 @@ CC = gcc
 LDLIBS = -lpbc -lgmp -lssl -lcrypto -lmosquitto -Wl,-rpath=/usr/local/lib
 CFLAGS = -W -O
 
-ksibe: hks_ibe.o
-	$(CC) -o ksibe hks_ibe.o $(LDLIBS) $(LDOSSL)
-hks_ibe.o: hks_ibe.c  KeyStore_ibe.h
+ksibe: hks_ibe.o db.o
+	$(CC) -o ksibe hks_ibe.o  db.o $(LDLIBS) $(LDOSSL)
+hks_ibe.o: hks_ibe.c   KeyStore_ibe.h typ.h
 	$(CC) $(CFLAGS) $(OSSLFLAG) -c  hks_ibe.c -o hks_ibe.o
+db.o:	db.c db.h typ.h
+	$(CC) $(CFLAGS) $(OSSLFLAG) -c  db.c -o db.o
 clean:
 	rm -f ksibe *.o
