Add KeyNote, PEM

--- a/Code/RPI/Sub/Makefile
+++ b/Code/RPI/Sub/Makefile
@@ -6,8 +6,8 @@ sub: sub.o ss.o
 	$(CC) -o sub sub.o  ss.o $(LDLIBS) $(LDOSSL)
 sub.o: sub.c sub.h 
 	$(CC) $(CFLAGS) $(OSSLFLAG) -c sub.c -o sub.o
-ss.o: shamiresecretshare.c shamiresecretshare.h 
-	$(CC) $(CFLAGS) $(OSSLFLAG) -c  shamiresecretshare.c -o ss.o
+ss.o: shamirsecretshare.c shamirsecretshare.h 
+	$(CC) $(CFLAGS) $(OSSLFLAG) -c  shamirsecretshare.c -o ss.o
 clean:
 	rm -f sub *.o
 
