Clean Subscriber foldr

--- a/Subscriber/Makefile
+++ b/Subscriber/Makefile
@@ -2,12 +2,11 @@ CC = gcc
 LDLIBS = -lssl -lcrypto -lmosquitto -Wl,-rpath=/usr/local/lib
 CFLAGS = -W -O
 
-sub: sub.o ss.o
-	$(CC) -o sub sub.o  ss.o $(LDLIBS) $(LDOSSL)
-sub.o: sub.c sub.h 
-	$(CC) $(CFLAGS) $(OSSLFLAG) -c sub.c -o sub.o
-ss.o: shamirsecretshare.c shamirsecretshare.h 
+Subscriber: sub.o ss.o
+	$(CC) -o Subscriber subscribe.o  ss.o $(LDLIBS) $(LDOSSL)
+subscribe.o: subscribe.c subscribe.h
+	$(CC) $(CFLAGS) $(OSSLFLAG) -c subscribe.c -o subscribe.o
+ss.o: shamirsecretshare.c shamirsecretshare.h
 	$(CC) $(CFLAGS) $(OSSLFLAG) -c  shamirsecretshare.c -o ss.o
 clean:
-	rm -f sub *.o
-
+	rm -f Subscriber *.o
